# SDK

./: README.html  README.md  mke.css
client/cpp/: README.html  README.md
client/cpp/doc/: mkeclient.html  mkeclient.md  mkeclient_integration_examples.html  mkeclient_integration_examples.md  mkeclient_tester.html  mkeclient_tester.md
client/cpp/mkeclient/: CMakeLists.txt  LICENSE.txt  NOTICE.txt
client/cpp/mkeclient/cmake/: FindMKEAPI.cmake
client/cpp/mkeclient/src/: CMakeLists.txt  README.md
client/cpp/mkeclient/src/examples/: CMakeLists.txt  demo_device_discovery.cpp  demo_device_state.cpp  demo_getframe_async.cpp  demo_getframe_sync.cpp  demo_pushframes.cpp  test_latency.cpp
client/cpp/mkeclient/src/integration_examples/: CMakeLists.txt  client_open3d_demo.cpp  client_opencv_demo.cpp  client_pcl_demo.cpp
client/cpp/mkeclient/src/mke/: error.h
client/cpp/mkeclient/src/mke/cli/: bus.cpp  bus.h  client.cpp  client.h  error.cpp  error.h  factory.cpp  factory.h
client/cpp/mkeclient/src/mke/cli/priv/: rawcli.cpp  rawcli.h
client/cpp/mkeclient/src/mke/device/: location.cpp  location.h  type.cpp  type.h
client/cpp/mkeclient/src/mke/memory/: boostptrpool.h  mempool.h  ptrpool.h
client/cpp/mkeclient/src/mke/net/ssdp/: device.h  discovery.cpp  discovery.h  interface.h  intlist_base.h  intlist_linux.h  intlist_macos.h  intlist_win.h  parser.cpp  parser.h
client/cpp/mkeclient/src/mke/util/: crc32.cpp  crc32.h
client/cpp/mkeclient/src/tester/: README.md  config.hpp  helpers.cpp  helpers.hpp  includes.hpp  main.cpp  results.cpp  results.hpp
client/cpp/mkeclient/src/tester/tests_regular/: test_core_async_cascading.cpp  test_core_fast_requests.cpp  test_core_invalid_connection.cpp  test_core_memory_limit.cpp  test_core_multiple_connections.cpp  test_core_offline.cpp  test_core_stability.cpp  test_core_timeouts.cpp  test_device_info.cpp  test_device_info_async.cpp  test_device_state.cpp  test_device_state_async.cpp  test_firmware_info.cpp  test_firmware_info_async.cpp  test_frame_push_async.cpp  test_frame_push_interrupt_by_state_change.cpp  test_frame_push_stop_sync.cpp  test_frame_push_when_already_pushing.cpp  test_get_frame.cpp  test_get_frame_async.cpp  test_get_frame_exceptions.cpp  test_policies_get_async.cpp  test_policies_list_async.cpp  test_policies_set_async.cpp  test_terminate_by_reboot.cpp  test_terminate_by_reboot_and_reconnect.cpp  test_terminate_by_shutdown.cpp
client/python/: README.html  README.md  pymkeapi-1.2.4-py3-none-any.whl
client/python/doc/: pysyncclient.html  pysyncclient.md
client/python/mkeapi_examples/: client_getframe.py  client_pushframes.py  open3d_getframe.py  open3d_viewer.py  pcl_getframe.py  pcl_viewer.py  raw_getframe.py  raw_getstate.py  raw_setstate.py  sensor_discovery.py  simple_viewer.py
client/python/pymkeapi/: CMakeLists.txt  README.md  setup.py
client/ros1/: README.html  README.md
client/ros1/doc/: mkeros1_node.html  mkeros1_node.md  pymkeros1_node.html  pymkeros1_node.md
client/ros1/mkeros/: CMakeLists.txt  README.md  package.xml
client/ros1/mkeros/cmake/: FindMKECLI.cmake
client/ros1/mkeros/config/: mkeros1_config.yaml
client/ros1/mkeros/launch/: mkeros1_cpp.launch
client/ros1/mkeros/src/: cliparser.h  device_discovery.h  device_info.h  fpreal.h  mkeros1_node.cpp  publisher.h
client/ros1/pymkeros/: CMakeLists.txt  README.md  package.xml  setup.py
client/ros2/: README.html  README.md
client/ros2/doc/: mkeros2_node.html  mkeros2_node.md  pymkeros2_node.html  pymkeros2_node.md
client/ros2/mkeros2/: CMakeLists.txt  README.md  package.xml
client/ros2/mkeros2/cmake/: FindMKECLI.cmake
client/ros2/mkeros2/config/: mkeros2_config.yaml
client/ros2/mkeros2/launch/: mkeros2.launch.py  mkeros2_cpp.xml
client/ros2/mkeros2/src/: device_info.h  mkeros2_node.cpp  publisher.h
client/ros2/pymkeros2/: README.md  package.xml  setup.cfg  setup.py
make_wheels/: CMakeLists.txt  version.cmake
mkeapi/: CMakeLists.txt
mkeapi/doc/: mkeapi.md
mkeapi/doc/html/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  dir_9224373ef81015a0030aa26468b44f08.html  dir_cbd962111eb1cd9ffdbfe5e8c89cdd5e.html  dir_cf26423c7838ad11aab75ec6f8760dcf.html  dir_e95a90d950c056054a1668dea6088e85.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  group__mkeapi.html  index.html  menudata.js  mkeapi_8h.html  mkeapi_8h_source.html  modules.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemke.html  namespacemke_1_1api.html  namespaces.html  structmke_1_1api_1_1_mk_e_frame_footer-members.html  structmke_1_1api_1_1_mk_e_frame_footer.html  structmke_1_1api_1_1_mk_e_frame_item1-members.html  structmke_1_1api_1_1_mk_e_frame_item1.html  structmke_1_1api_1_1_mk_e_frame_item2-members.html  structmke_1_1api_1_1_mk_e_frame_item2.html  structmke_1_1api_1_1_mk_e_reply-members.html  structmke_1_1api_1_1_mk_e_reply.html  structmke_1_1api_1_1_mk_e_reply___device_info-members.html  structmke_1_1api_1_1_mk_e_reply___device_info.html  structmke_1_1api_1_1_mk_e_reply___firmware_info-members.html  structmke_1_1api_1_1_mk_e_reply___firmware_info.html  structmke_1_1api_1_1_mk_e_reply___frame-members.html  structmke_1_1api_1_1_mk_e_reply___frame.html  (+40 more)
mkeapi/include/: mkeapi.h
mkediscovery/: CMakeLists.txt  README.html  README.md
mkediscovery/cmake/: FindMKECLI.cmake  MacOSXBundleInfo.plist.in
mkediscovery/installer_win/: installer_script.iss  readme.txt
mkediscovery/resources/: about.html  mkelogo.icns  resources.qrc  resources.rc
mkediscovery/src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  devicelist.cpp  devicelist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
pymkeviewer/: README.html  README.md  pymkeviewer-1.2.3-py3-none-any.whl  pymkeviewer-1.2.4-py3-none-any.whl  pymkeviewer-1.2.5-py3-none-any.whl
pymkeviewer/doc/: pymkeviewer.html  pymkeviewer.md
pymkeviewer/pymkeviewer/: CMakeLists.txt  README.md  setup.py
pymkeviewer/pymkeviewer/pymkeviewer/: __init__.py  pymkeviewer.py  viewer.py
(+1566 files in other folders)
