# This is MkEDiscovery
# 2021, Jan Heller, jan@magik-eye.com

CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(mkediscovery LANGUAGES CXX VERSION 1.0.0)

# Version
SET(PROJECT_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
ADD_DEFINITIONS(-DMKEDISCOVERY_VERSION="${PROJECT_VERSION}")

# CXX Flags
add_compile_options(-std=c++11)

# Add CMAKE definition
ADD_DEFINITIONS(-DCMAKE)

# Qt5
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Widgets REQUIRED)

# LibMkEClient
if(NOT (MKECLI_URL OR MKECLI_GIT OR MKECLI_ROOT))
  set(MKECLI_URL "${CMAKE_CURRENT_SOURCE_DIR}/../client/cpp/mkeclient")
endif()

if(NOT (MKEAPI_URL OR MKEAPI_GIT OR MKEAPI_ROOT))
  set(MKEAPI_URL "${CMAKE_CURRENT_SOURCE_DIR}/../mkeapi")
endif ()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake/") 
find_package(MKECLI REQUIRED)

ADD_SUBDIRECTORY(src)
