<?xml version="1.0"?>
<package format="2">
  <name>mkeros</name>
  <version>0.0.0</version>
  <description>The MagikEye sensor pointcloud package</description>

  <maintainer email="jigar@magik-eye.com">Jigar Patel</maintainer>
  <author email="jigar@magik-eye.com">Jigar Patel</author>
  <license>BSD</license>
  <url type="website">http://magik-eye.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
